# goit-pyweb-hw-06

./: Script-all-tasks.sql  add_query_1.sql  add_query_2.sql  dump-university-202412161829.sql  dump-university-202412161940.sql  main.py  pyproject.toml  query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
